# skola-alpha

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TEMP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: .env.example  README.md  alembic.ini  czech_english_vocabulary.csv  populate_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8cf3ee8e6f33_create_users_table.py
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  routers.py  schemas.py
backend/tests/: conftest.py  test_habits.py  test_health.py  test_vocabulary.py
docs/: ARCHITECTURE.md  AUTHENTICATION_ARCHITECTURE.md  CI_CD_GUIDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  GOOGLE_OAUTH_SETUP.md
frontend/: .env.example  .eslintrc.cjs  .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  AuthContext.tsx  authService.ts  habitService.ts  main.tsx  types.ts
frontend/src/components/: Dashboard.tsx  HabitTracker.test.tsx  HabitTracker.tsx  Login.tsx  MathActivity.tsx  SpellingActivity.tsx  StatusFooter.tsx  UserProfile.tsx
frontend/src/styles/: global.css
frontend/src/utils/: sound.ts
